--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@ feel free to take inspo from my website! ^_^
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tasnim's website</title>
+    <title>quwrof⋅˚₊‧𐙚</title>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Jua&family=Kosugi+Maru&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -35,7 +32,7 @@ feel free to take inspo from my website! ^_^
 
  <button class="about" onclick="clickSound();"></button>
  <span class="hide3">
-    about
+    about me
  </span>
 
  <button class="wip2" onclick="clickSound();"></button>
@@ -46,8 +43,10 @@ feel free to take inspo from my website! ^_^
  </div>
 
 </div>
+<p id="undertxt">this website is meant to be viewed on a computer.</p>
 
 
+<!-- TODO: clean all this mess up and rename things -->
 
 <div id="myWindow" class="bomboclaat">
     <div class="window-top">
@@ -67,6 +66,7 @@ feel free to take inspo from my website! ^_^
 
     <div class="tab-panel active" data-tab="about">
       <div class="aboutme">
+        <h2>about the<br>webmistress...</h2>
         <p>
         tasnim
 
@@ -75,37 +75,59 @@ feel free to take inspo from my website! ^_^
         <span class="img img1"></span>
         she/her
         <br>
-        lebanese, living in germany
+        lebanese
+        <span class="img img4"></span>
+        living in germany
         <br>
-        computer science student
-        <span class="img img2"></span>
+        <span class="img img5"></span>computer science student<span class="img img6"></span>
         <br>
-        scottish straight cat mom
+        <!-- scottish straight cat mom
         <span class="img img3"></span>
-        <br>
+        <br> -->
         <span class="tooltip-target" data-tooltip="jungian psychological types">ET(N)</span>
         <span class="tooltip-target" data-tooltip="enneagram">SO712</span>
         <span class="tooltip-target" data-tooltip="psychosophy">VLEF(4321)</span>
-        </p>
+        
+        <br>
+        <br>
+        <a href="https://anilist.co/user/quwrof/">anilist<span class="img img2"></span></a>
+
+      </p>
         <div id="tooltip" class="tooltip"></div>
       </div>
     </div>
 
     <div class="tab-panel" data-tab="favs">
-      <div class="aboutme">
-        <p>bomboclaat</p>
+      <div class="aboutme1">
+        <div class="fav">
+          <h2>my favorites <br> and interests...</h2>
+
+          <p><span class="hd">interests</span> matcha, psychological typology, sudoku, animanga (retro,shoujosei,mystery,(psych.)thriller), manhwa, pokemon card collecting, animals, tech, astronomy, sticker collecting, travelling, pharmacology</p>
+
+          <p><span class="hd">animanga</span> hunter x hunter, monster, takarajima, attack on titan, rose of versailles, vagabond, apothecary diaries, nana, death note, karekano, mononoke series, monogatari series, beastars, berserk, howl's moving castle, billy bat</p>
+          <p><span class="hd">music</span> nujabes, masayoshi takanaka, illit, yuji ohno, humming urban stereo, atlus sound team,  shing02, serani poji, toby fox, makoto matsushita, lisa ono, blu-swing, cise starr, sade, kentaro haneda</p>
+          <p><span class="hd">games</span> undertale, super mario galaxy 1 and 2, minecraft, animal jam, animal crossing, roblox </p>
+          <p><span class="hd">pokemon</span> mienshao<span class="img img7"></span>, sylveon<span class="img img8"></span>, glaceon<span class="img img9"></span></p>
+          <p><span class="hd">sanrio,san-x,etc.</span> usahana, my melody, monchhichi, sugarbunnies, pochacco, chi chai monchan, korilakkuma</p>
+          <p><span class="hd">animals</span> snow leopards and other felines, red pandas, bunnies, sea otters, monkeys, sea angels </p>
+          <p><span class="hd">flowers</span> plumeria, lavender, lily of the valley, hibiscus, wisteria, oriental lily, water lily </p>
+          <p><span class="hd">celestial objects</span> pleiades, moon, neptune, pluto, orion's belt</p>
+
+          
+
+        </div>
       </div>
     </div>
 
     <div class="tab-panel" data-tab="kins">
-      <div class="aboutme">
-        <p>pussyklaat</p>
+      <div class="aboutme1">
+        <p>bomboclaat</p>
       </div>
     </div>
 
     <div class="tab-panel" data-tab="cat">
-      <div class="aboutme">
-        <p>mi bombo</p>
+      <div class="aboutme1">
+        <p>pussyclaat</p>
       </div>
     </div>
   </div>
@@ -115,9 +137,9 @@ feel free to take inspo from my website! ^_^
 <div id="Window2" class="bomboclaat">
     <div class="window-top">
         <button id="common" class="tab-btn active" data-tab="commonplaceb"><p>notes</p></button>
-        <button class="tab-btn" data-tab="matcha"><p>matcha</p></button>
-        <button class="tab-btn" data-tab="typology"><p>typology</p></button>
-
+        <button class="tab-btn" data-tab="matcha"><p>blabla</p></button>
+        <button class="tab-btn" data-tab="typology"><p>idk</p></button>
+        <button class="tab-btn" data-tab="todo"><p>TODO</p></button>
 <audio id="closesound" src="sound/close.mp3" autostart="false"></audio>
  <button class="close" onclick="closeSound();">
        <p>x</p>
@@ -128,91 +150,30 @@ feel free to take inspo from my website! ^_^
   <div id="content1" class="window-content">
 
     <div class="tab-panel active" data-tab="commonplaceb">
-      <div class="aboutme">
-        <p>
-        tasnim
-
-       hello
-        </p>
+      <div class="aboutme1">
+        <p>wip !</p>
         <div id="tooltip" class="tooltip"></div>
       </div>
     </div>
 
     <div class="tab-panel" data-tab="matcha">
-      <div class="aboutme">
+      <div class="aboutme1">
         <p>bomboclaat</p>
       </div>
     </div>
 
     <div class="tab-panel" data-tab="typology">
-      <div class="aboutme">
+      <div class="aboutme1">
         <p>pussyklaat</p>
       </div>
     </div>
 
-  </div>
-
-</div>
-
-<div id="myWindow" class="bomboclaat">
-    <div class="window-top">
-        <button id="aboutt" class="tab-btn active" data-tab="about"><p>about me</p></button>
-        <button class="tab-btn" data-tab="favs"><p>interests & favorites</p></button>
-        <button class="tab-btn" data-tab="kins"><p>relatable characters</p></button>
-        <button class="tab-btn" data-tab="cat"><p>my cat</p></button>
-
-<audio id="closesound" src="sound/close.mp3" autostart="false"></audio>
- <button class="close" onclick="closeSound();">
-       <p>x</p>
- </button>
- 
-</div>
-
-  <div id="content1" class="window-content">
-
-    <div class="tab-panel active" data-tab="about">
-      <div class="aboutme">
-        <p>
-        tasnim
-
-        <span class="img img1"></span>
-        twenty
-        <span class="img img1"></span>
-        she/her
-        <br>
-        lebanese, living in germany
-        <br>
-        computer science student
-        <span class="img img2"></span>
-        <br>
-        scottish straight cat mom
-        <span class="img img3"></span>
-        <br>
-        <span class="tooltip-target" data-tooltip="jungian psychological types">ET(N)</span>
-        <span class="tooltip-target" data-tooltip="enneagram">SO712</span>
-        <span class="tooltip-target" data-tooltip="psychosophy">VLEF(4321)</span>
-        </p>
-        <div id="tooltip" class="tooltip"></div>
+    <div class="tab-panel" data-tab="todo">
+      <div class="aboutme1">
+        <p >TODO: <br> -fix scrollbar when no overflow <br> -fill the other pages :3</p>
       </div>
     </div>
 
-    <div class="tab-panel" data-tab="favs">
-      <div class="aboutme">
-        <p>bomboclaat</p>
-      </div>
-    </div>
-
-    <div class="tab-panel" data-tab="kins">
-      <div class="aboutme">
-        <p>pussyklaat</p>
-      </div>
-    </div>
-
-    <div class="tab-panel" data-tab="cat">
-      <div class="aboutme">
-        <p>mi bombo</p>
-      </div>
-    </div>
   </div>
 
 </div>
@@ -222,6 +183,7 @@ feel free to take inspo from my website! ^_^
         <button id="random" class="tab-btn active" data-tab="random"><p>random</p></button>
         <button class="tab-btn" data-tab="idk"><p>dunno</p></button>
         <button class="tab-btn" data-tab="nunu"><p>ash trevino</p></button>
+
 
 <audio id="closesound" src="sound/close.mp3" autostart="false"></audio>
  <button class="close" onclick="closeSound();">
@@ -233,26 +195,25 @@ feel free to take inspo from my website! ^_^
   <div id="content1" class="window-content">
 
     <div class="tab-panel active" data-tab="random">
-      <div class="aboutme">
-        <p>
-        tasnim
-
-       hello
+      <div class="aboutme1">
+        <p>under construction
         </p>
       </div>
     </div>
 
     <div class="tab-panel" data-tab="idk">
-      <div class="aboutme">
+      <div class="aboutme1">
         <p>6767676767676767</p>
       </div>
     </div>
 
     <div class="tab-panel" data-tab="nunu">
-      <div class="aboutme">
+      <div class="aboutme1">
         <p>you have to wait NUNU</p>
       </div>
     </div>
+
+
 
   </div>
 
@@ -261,6 +222,7 @@ feel free to take inspo from my website! ^_^
 
 
     <script src="index.js"> </script>
+    <script src="click.js"> </script>
 
 
 </body>
