--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ feel free to take inspo from my website! ^_^
           <p><span class="hd">interests</span> matcha, psychological typology, sudoku, animanga (retro,shoujosei,mystery,(psych.)thriller), manhwa, pokemon card collecting, animals, tech, astronomy, sticker collecting, travelling, pharmacology</p>
 
           <p><span class="hd">animanga</span> hunter x hunter, monster, takarajima, attack on titan, rose of versailles, vagabond, apothecary diaries, nana, death note, karekano, mononoke series, monogatari series, beastars, berserk, howl's moving castle, billy bat</p>
-          <p><span class="hd">music</span> nujabes, masayoshi takanaka, illit, yuji ohno, humming urban stereo, atlus sound team,  shing02, serani poji, toby fox, makoto matsushita, lisa ono, blu-swing, cise starr, sade, kentaro haneda</p>
+          <p><span class="hd">music</span> nujabes, masayoshi takanaka, illit, yuji ohno, humming urban stereo, atlus sound team,  shing02, sade, serani poji, toby fox, makoto matsushita, lisa ono, blu-swing, cise starr, kentaro haneda</p>
           <p><span class="hd">games</span> undertale, super mario galaxy 1 and 2, minecraft, animal jam, animal crossing, roblox </p>
           <p><span class="hd">pokemon</span> mienshao<span class="img img7"></span>, sylveon<span class="img img8"></span>, glaceon<span class="img img9"></span></p>
           <p><span class="hd">sanrio,san-x,etc.</span> usahana, my melody, monchhichi, sugarbunnies, pochacco, chi chai monchan, korilakkuma</p>
