edited bottom text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ feel free to take inspo from my website! ^_^
  </div>
 
 </div>
-<p id="undertxt">this website is meant to be viewed on a computer.</p>
+<p id="undertxt">this website is intended to be viewed on desktop.</p>
 
 
 <!-- TODO: clean all this mess up and rename things -->
