--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@ feel free to take inspo from my website! ^_^
         <a href="https://anilist.co/user/quwrof/">anilist<span class="img img2"></span></a>
 
       </p>
-        <div id="tooltip" class="tooltip"></div>
       </div>
     </div>
 
@@ -113,8 +112,6 @@ feel free to take inspo from my website! ^_^
           <p><span class="hd">flowers</span> plumeria, lavender, lily of the valley, hibiscus, wisteria, oriental lily, water lily </p>
           <p><span class="hd">celestial objects</span> pleiades, moon, neptune, pluto, orion's belt</p>
 
-          
-
         </div>
       </div>
     </div>
@@ -127,10 +124,37 @@ feel free to take inspo from my website! ^_^
 
     <div class="tab-panel" data-tab="cat">
       <div class="aboutme1">
-        <p>pussyclaat</p>
+                <div class="roundd"><div class="round"><div class="round2"></div></div></div>
+        <div id="desc1" class="desc">
+          <p> <span class="desch">name:</span> nomnom
+            <br>
+            <span class="desch">age:</span> 3
+            <br>
+            <span class="desch">gender:</span> boy
+            <br>
+            <span class="desch">breed:</span> <span class="tooltip-target" data-tooltip="scottish straight cats are scottish folds without the fold mutation!">scottish straight</span>
+            <br>
+            <span class="desch">color:</span> cream and gray
+            <br>
+            <span class="desch">personality:</span> sweet-natured, patient, chatty, playful
+          </p>
+        </div>  
+      <div id="desc2" class="desc">
+        <p>
+          <span class="desch1">fun facts:</span> <span class="img img11"></span>
+          <br>
+          my favorite food is rabbit-based kibble...<br>
+          my favorite toy is a bouncy ball...<br>
+          my favorite activity is running! <br>
+          i purr just from being looked at! <br>
+          i can sit like a human <span class="img img10"></span>
+        </p>
+      </div>
+        </div>
       </div>
     </div>
-  </div>
+
+    <div id="tooltip" class="tooltip"></div>
 
 </div>
 
